Update google stock price forecast.ipynb

--- a/google stock price forecast.ipynb
+++ b/google stock price forecast.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "key='bfefa72b58ce16638e4384eb6beea09403def336'"
+    "key=''"
    ]
   },
   {
