--- a/Stock correlation.ipynb
+++ b/Stock correlation.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import pandas_datareader as pdr\n",
-    "key='bfefa72b58ce16638e4384eb6beea09403def336'\n",
+    "key=''\n",
     "df1 = pdr.get_data_tiingo('GOOG', api_key=key)\n",
     "df1.to_csv('goog.csv')\n",
     "df2 = pdr.get_data_tiingo('MSFT', api_key=key)\n",
